k8s/application/webapp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canboapi-deployment
spec:
  selector:
    matchLabels:
      app: canboapi
  replicas: 1
  template:
    metadata:
      labels:
        app: canboapi
    spec:
      containers:
        - name: canboapi
          image: dockerhub.dttt.vn/u202001/canbo.api:5.1
          ports:
            - containerPort: 80
      imagePullSecrets:
      - name: dockerhubdtttvn

---
apiVersion: v1
kind: Service
metadata:
  name: canboapi-service
  labels:
    app: canboapi
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30100
  selector:
    app: canboapi

#use port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workflowapi-deployment
spec:
  selector:
    matchLabels:
      app: workflowapi
  replicas: 1
  template:
    metadata:
      labels:
        app: workflowapi
    spec:
      containers:
        - name: workflowapi
          image: dockerhub.dttt.vn/core/workflow.api:5.1
          ports:
            - containerPort: 80
      imagePullSecrets:
      - name: dockerhubdtttvn

---
apiVersion: v1
kind: Service
metadata:
  name: workflowapi-service
  labels:
    app: workflowapi
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30101
  selector:
    app: workflowapi

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userorgapi-deployment
spec:
  selector:
    matchLabels:
      app: userorgapi
  replicas: 1
  template:
    metadata:
      labels:
        app: userorgapi
    spec:
      containers:
        - name: userorgapi
          image: dockerhub.dttt.vn/core/userorg.api:5.1
          ports:
            - containerPort: 81
      imagePullSecrets:
      - name: dockerhubdtttvn

---
apiVersion: v1
kind: Service
metadata:
  name: userorg-service
  labels:
    app: userorg
spec:
  type: NodePort
  ports:
    - port: 81
      nodePort: 30102

#do not use port

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identityserver-deployment
spec:
  selector:
    matchLabels:
      app: identityserver
  replicas: 1
  template:
    metadata:
      labels:
        app: identityserver
    spec:
      containers:
        - name: identityserver
          image: dockerhub.dttt.vn/core/identityserver:5.1
      imagePullSecrets:
      - name: dockerhubdtttvn

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorizationapi-deployment
spec:
  selector:
    matchLabels:
      app: authorizationapi
  replicas: 1
  template:
    metadata:
      labels:
        app: authorizationapi
    spec:
      containers:
        - name: authorizationapi
          image: dockerhub.dttt.vn/core/authorization.api:5.1
      imagePullSecrets:
      - name: dockerhubdtttvn

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commonmasterdataapi-deployment
spec:
  selector:
    matchLabels:
      app: commonmasterdataapi
  replicas: 1
  template:
    metadata:
      labels:
        app: commonmasterdataapi
    spec:
      containers:
        - name: commonmasterdataapi
          image: dockerhub.dttt.vn/core/commonmasterdata.api:5.1
      imagePullSecrets:
      - name: dockerhubdtttvn
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fileapi-deployment
spec:
  selector:
    matchLabels:
      app: fileapi
  replicas: 1
  template:
    metadata:
      labels:
        app: fileapi
    spec:
      containers:
        - name: fileapi
          image: dockerhub.dttt.vn/core/file.api:5.1
          volumeMounts:
          - mountPath: /app/wwwroot/uploads
            name: fileapi-data
      volumes:
      - name: fileapi-data
        persistentVolumeClaim:
          claimName: fileapi-pvc-claim
      imagePullSecrets:
      - name: dockerhubdtttvn
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificationapi-deployment
spec:
  selector:
    matchLabels:
      app: notificationapi
  replicas: 1
  template:
    metadata:
      labels:
        app: notificationapi
    spec:
      containers:
        - name: notificationapi
          image: dockerhub.dttt.vn/core/notification.api:5.1
      imagePullSecrets:
      - name: dockerhubdtttvn
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tailieuapi-deployment
spec:
  selector:
    matchLabels:
      app: tailieuapi
  replicas: 1
  template:
    metadata:
      labels:
        app: tailieuapi
    spec:
      containers:
        - name: tailieuapi
          image: dockerhub.dttt.vn/core/tailieu.api:5.1
      imagePullSecrets:
      - name: dockerhubdtttvn
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slogapi-deployment
spec:
  selector:
    matchLabels:
      app: slogapi
  replicas: 1
  template:
    metadata:
      labels:
        app: slogapi
    spec:
      containers:
        - name: slogapi
          image: dockerhub.dttt.vn/core/slog.api:5.1
      imagePullSecrets:
      - name: dockerhubdtttvn

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: templateapi-deployment
spec:
  selector:
    matchLabels:
      app: templateapi
  replicas: 1
  template:
    metadata:
      labels:
        app: templateapi
    spec:
      containers:
        - name: templateapi
          image: dockerhub.dttt.vn/core/template.api:5.1
      imagePullSecrets:
      - name: dockerhubdtttvn

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uniquenumberapi-deployment
spec:
  selector:
    matchLabels:
      app: uniquenumberapi
  replicas: 1
  template:
    metadata:
      labels:
        app: uniquenumberapi
    spec:
      containers:
        - name: uniquenumberapi
          image: dockerhub.dttt.vn/core/uniquenumber.api:5.1
      imagePullSecrets:
      - name: dockerhubdtttvn

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduleapi-deployment
spec:
  selector:
    matchLabels:
      app: scheduleapi
  replicas: 1
  template:
    metadata:
      labels:
        app: scheduleapi
    spec:
      containers:
        - name: scheduleapi
          image: dockerhub.dttt.vn/core/schedule.api:5.1
      imagePullSecrets:
      - name: dockerhubdtttvn

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ruletrackingapi-deployment
spec:
  selector:
    matchLabels:
      app: ruletrackingapi
  replicas: 1
  template:
    metadata:
      labels:
        app: ruletrackingapi
    spec:
      containers:
        - name: ruletrackingapi
          image: dockerhub.dttt.vn/core/ruletracking.api:5.0
      imagePullSecrets:
      - name: dockerhubdtttvn


#client

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userclient-deployment
spec:
  selector:
    matchLabels:
      app: userclient
  replicas: 1
  template:
    metadata:
      labels:
        app: userclient
    spec:
      containers:
        - name: userclient
          image: dockerhub.dttt.vn/u202001/user.client:5.1
          ports:
            - containerPort: 80
          volumeMounts:
          - mountPath: /usr/share/nginx/html/assets/environments/
            name: client-data
      imagePullSecrets:
      - name: dockerhubdtttvn
      volumes:
      - name: client-data
        persistentVolumeClaim:
          claimName: volumesclient-pvc-claim
---
apiVersion: v1
kind: Service
metadata:
  name: userclient-service
  labels:
    app: userclient
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30200
  selector:
    app: userclient

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminclient-deployment
spec:
  selector:
    matchLabels:
      app: adminclient
  replicas: 1
  template:
    metadata:
      labels:
        app: adminclient
    spec:
      containers:
        - name: adminclient
          image: dockerhub.dttt.vn/u202001/admin.client:5.1
          ports:
            - containerPort: 80
          volumeMounts:
          - mountPath: /usr/share/nginx/html/assets/environments/
            name: client-data
      imagePullSecrets:
      - name: dockerhubdtttvn
      volumes:
      - name: client-data
        persistentVolumeClaim:
          claimName: volumesclient-pvc-claim
---
apiVersion: v1
kind: Service
metadata:
  name: adminclient-service
  labels:
    app: adminclient
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30201
  selector:
    app: adminclient

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canboclient-deployment
spec:
  selector:
    matchLabels:
      app: canboclient
  replicas: 1
  template:
    metadata:
      labels:
        app: canboclient
    spec:
      containers:
        - name: canboclient
          image: dockerhub.dttt.vn/u202001/canbo.client:5.1_vtb
          ports:
            - containerPort: 80
          volumeMounts:
          - mountPath: /usr/share/nginx/html/assets/environments/
            name: client-data
      imagePullSecrets:
      - name: dockerhubdtttvn
      volumes:
      - name: client-data
        persistentVolumeClaim:
          claimName: volumesclient-pvc-claim
---
apiVersion: v1
kind: Service
metadata:
  name: canboclient-service
  labels:
    app: canboclient
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30202
  selector:
    app: canboclient
