k8s/application/traefikproxy.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`hdkhoa.example.com`) && PathPrefix(`/canbov5`)
    kind: Rule
    services:
    - name: canboclient-service
      port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`hdkhoa.example.com`) && PathPrefix(`/adminv5`)
    kind: Rule
    services:
    - name: adminclient-service
      port: 80
  tls:
    certResolver: myresolver

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetlsnginx
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`hdkhoa.example.com`) && PathPrefix(`/userv5`)
    kind: Rule
    services:
    - name: userclient-service
      port: 80
  tls:
    certResolver: myresolver
